syntax = "proto3";

option go_package = "protos/transactionpb;transactionpb";

service Transaction {
  rpc CreateTransaction(CreateTransactionRequest) returns (TransactionResponse);
}

message MemberAmount {
  string user_id = 1;
  double amount = 2;
}

message CreateTransactionRequest {
  string creator_id = 1;
  string session_id = 2;
  repeated MemberAmount member_amounts = 3;
}

message TransactionResponse {
  string transaction_id = 1;
  string creator_id = 2;
  string session_id = 3;
  string created_at = 6;
}
